--- a/src/md49_base_controller/config/md49_defaults.yaml
+++ b/src/md49_base_controller/config/md49_defaults.yaml
@@ -59,4 +59,8 @@ speed_l: 128,
 # With selected mode=0: 128=STOP
 # Accepted values with selected mode=0: 0(Full Reverse)-255(Full Forward)
 speed_r: 128,
+
+wheel_dia: 0.0371,
+wheel_dist: 0.395,
+
 }
